# git-foss

./: .gitignore  Makefile  PracticeMakefile  README.md  docker-compose.yaml  requirements.txt
docs_domain/docs/source/: HOW_TO_CONTRIBUTE.rst  QUICKSTART.md  conf.py  index.rst
docs_domain/src/: sales.py
file_exchenger/docs/: SequenceDiagram.drawio  UseCases_BasicTransfer.drawio  context.drawio
order-service/: pyproject.toml
order_service/: Dockerfile  pyproject.toml
product-service/: pyproject.toml
product_service/: Makefile  pyproject.toml
src/: math_demo.py
testing/src/: math_demo.py
testing/tests/: test_principles.py
testing_tdd/: Makefile  setup.py
testing_tdd/src/: ndfl.py
testing_tdd/src/ndfl2026_test.egg-info/: PKG-INFO
testing_tdd/tests/: test_ndfl_basic.py
tests/: test_principles.py
