[project]
name = "product-service"
version = "0.0.1"
description = ""
authors = [
    {name = "Herman",email = "dogfish520@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
